url: http://localhost:5173/
tags:
  - web
---
- launchApp
- extendedWaitUntil:
    visible: 'Respect de ta vie privée'
    timeout: 60000

- runFlow: ../common/cookies/AcceptCookies.yml

- assertVisible: "Bienvenue\_!"
- assertVisible: 'Débloque ton crédit'

- runFlow: ../common/navigation/GoToSearchFromTabBar.yml
- assertVisible: 'Parcours les catégories'
- tapOn: 'CINÉMA'
- assertVisible: 'Cinéma'
- tapOn: "Films à l'affiche"
- runFlow:
    when:
      visible: 'Les offres'
    commands:
      - assertVisible: '.*résultats'
- runFlow:
    when:
      notVisible: 'Les offres'
    commands:
      - assertVisible: 'Pas de résultat'

- runFlow: ../common/navigation/GoToFavoritesFromTabBar.yml
- assertVisible: 'Identifie-toi pour retrouver tes favoris'
- assertVisible: 'Créer un compte'
- assertVisible: 'Se connecter'

- runFlow: ../common/navigation/GoToProfileFromTabBar.yml

- stopApp
