appId: ${MAESTRO_APP_ID}
---
- waitForAnimationToEnd
- tapOn:
    id: "icon-back"
    optional: true
- tapOn: "Rechercher des offres"
- tapOn: "Rechercher des offres" # Permet de réinitialiser l'état de la page Recherche