appId: ${MAESTRO_APP_ID}
---
- assertVisible: "Rechercher"
- tapOn:
    label: "Sélection de la 1ère offre disponible"
    below:
      text: .*résultats

- repeat: #Vérifier que l'offre est bien réservable
    while:
      visible: "Voir ma réservation"
    commands:
      - pressKey: back
      - scroll
      - tapOn:
          text: "Séances de cinéma"
          index: 1

- swipe:
   from: 
     id: "tagsContainer"
   direction: UP 

- scrollUntilVisible:
    element:
      text: "Passe le bon plan\_!"
    visibilityPercentage: 50

- repeat: #Vérifier que l'offre est bien réservable
    while:
      notVisible:
        id: "movie-calendar-day"
        index: 2
    commands:
      - pressKey: back
      - scroll
      - tapOn:
          text: "Séances de cinéma"
          index: 1
      - swipe:
          from: 
            id: "tagsContainer"
          direction: UP 
      - scrollUntilVisible:
          element:
            text: "Passe le bon plan\_!"
          visibilityPercentage: 50

- runFlow:
    when:
      visible:
        id: "movie-calendar-day"
        index: 2
    commands:
      - tapOn:
          id: "movie-calendar-day"
          index: 2

- tapOn:
    label: "Sélection de la 1ère date disponible"
    enabled: true
    above:
      text: .*€

- runFlow: #Si différentes gamme de prix pour l'offre
    when:
      visible: "Prix"
    commands:
        - tapOn:
            label: "Sélection du 1er prix disponible"
            below:
              text: "Prix"
        - tapOn: "Valider le prix"

- assertVisible: "Nombre de places"
- tapOn: "Duo"
- tapOn: "Finaliser ma réservation"

- assertVisible: "Détails de la réservation"
- tapOn: "Confirmer la réservation"

- assertVisible: "Réservation confirmée\_!"
- tapOn: "Voir ma réservation"

- scrollUntilVisible:
    element: "Annuler ma réservation"
- tapOn: "Annuler ma réservation"
- tapOn: "Annuler ma réservation"
