appId: ${MAESTRO_APP_ID}
---
- assertVisible: "Bienvenue\_!"
- runFlow: # Si affichage de la Home legacy
    when:
      visible:
        id: "module-background"
    commands:
        - assertVisible: "Débloque ton crédit"
        - tapOn:
            id: "module-background"
- runFlow: # Si affichage de la Home avec player vidéo
    when:
      visible:
        id: "intersectionObserver"
    commands:
        - scroll
        - assertVisible: "Débloque ton crédit"
        - tapOn:
            id: "systemBanner"


- assertVisible: "Crée-toi un compte"