appId: ${MAESTRO_APP_ID}
---
- "scroll"
- assertVisible: "Aides"
- tapOn: "Nouvelle fenêtre\_: Centre d’aide"

- assertVisible: # Vérifie la présence de l'url dans le browser
    id: "com.android.chrome:id/url_bar"
- tapOn:
    id: "com.android.systemui:id/back"