appId: ${MAESTRO_APP_ID}
---
- tapOn:
    text: "Informations légales"
    index: 1

- assertVisible: "Informations légales"
- assertVisible: "Mentions légales"
- tapOn:
    id: "Nouvelle fenêtre\_: Conditions Générales d’Utilisation"
- waitForAnimationToEnd
- doubleTapOn: # Permet de quitter le browser in-app
    id: "com.android.systemui:id/back"

- runFlow: # Fallback si problème de retour
    when:
      visible: "Autres"
    commands:
    - tapOn:
        text: "Informations légales"
        index: 1

- tapOn:
    id: "Nouvelle fenêtre\_: Charte de protection des données personnelles"
- "waitForAnimationToEnd"
- doubleTapOn: # Permet de quitter le browser in-app
    id: "com.android.systemui:id/back"

- tapOn:
    id: "com.android.systemui:id/back"

- runFlow: # Fallback si problème de retour
    when:
      visible: "Bonjour Test-e2e"
    commands:
    - tapOn:
        id: "Mon profil"