appId: ${MAESTRO_APP_ID}
---
- assertVisible: 'Rechercher'
- tapOn: "CD, vinyles, musique en ligne"

# TODO(e2e): Attendre que "Catégories soit check"
- tapOn: 'Catégories'

- assertVisible: "CD, vinyles, musique en ligne"
- tapOn: "CD"

- tapOn: 'Rechercher'