appId: ${MAESTRO_APP_ID}
---
- assertVisible: 'Rechercher'
- tapOn: "Livres" 

- runFlow:
    when:
      visible: "Ma position"
    commands:
        - tapOn: "Ma position"
        - tapOn: "Partout"

# TODO(e2e): Attendre que "Catégories soit check"
- tapOn: 'Catégories'

- tapOn: 'Tout'
- tapOn: 'Rechercher'

# TODO(e2e): Faire remonter des offres N-1 dans l'arbo
- swipe: # Permet d'éviter les offres gratuite en haut de liste
    from:
      text: Les offres
    direction: UP
