appId: ${MAESTRO_APP_ID}
---
- assertNotVisible: 'Mes réservations'
- tapOn: 'Mes favoris'

- assertVisible: 'Identifie-toi pour retrouver tes favoris'
- assertVisible:
    id: 'Créer un compte'
- assertVisible: 'Se connecter'
