appId: ${MAESTRO_APP_ID}
---
- assertVisible: 'Rechercher'
- tapOn:
    text: 'Livres papier'
    index: 0

- waitForAnimationToEnd

- assertVisible:
    id: 'tagsContainer'

- swipe: # Pour ne pas swipe depuis le module aperçu
    from:
      id: 'tagsContainer'
    direction: UP

- scrollUntilVisible:
    element: 'À propos'
- assertVisible: 'À propos'
- assertVisible: "Description\_:"

- scrollUntilVisible:
    element:
      text: "Passe le bon plan\_!"
    visibilityPercentage: 100
- assertVisible: 'Voir l’itinéraire'
- assertVisible: "Envoyer par\nSMS"

- tapOn: 'Réserver l’offre'
- assertVisible: 'Identifie-toi pour bénéficier de ton crédit et profiter des offres culturelles.'
- tapOn: 'Fermer la modale'

- waitForAnimationToEnd

- tapOn:
    id: 'AnimatedHeaderIconRoundContainer'
    index: 2

# Faire connexion après
