appId: ${MAESTRO_APP_ID}
env:
  LOCATION: 'Ma position'
---
- assertVisible: 'Rechercher'
- runFlow: ../../subFolder/cloud/commands/SetLocalizationToParis.yml
- swipe:
    from:
      text: 'Les offres'
    direction: UP
- tapOn:
    label: 'Sélection de la 1ère offre disponible'
    text: "Films à l'affiche"
    index: 1

- repeat: #Vérifier que l'offre est bien réservable
    while:
      visible: 'Voir ma réservation'
    commands:
      - pressKey: back
      - scroll
      - tapOn:
          text: "Films à l'affiche"
          index: 1

- swipe:
    from:
      id: 'tagsContainer'
    direction: UP

- scrollUntilVisible:
    element:
      text: "Passe le bon plan\_!"
    visibilityPercentage: 50

- runFlow: # Vérifie que l'offre n'est pas déjà réservée
    when:
      visible: 'Voir ma réservation'
    commands:
      - pressKey: back
      - scroll
      - tapOn:
          text: "Films à l'affiche"
          index: 1
      - swipe:
          from:
            id: 'tagsContainer'
          direction: UP
      - scrollUntilVisible:
          element:
            text: "Passe le bon plan\_!"
          visibilityPercentage: 50

- repeat: # Vérifie que l'offre a bien une date disponible dans 2 jours
    while:
      notVisible:
        id: 'movie-calendar-day'
        index: 3
    commands:
      - pressKey: back
      - scroll
      - tapOn:
          text: "Films à l'affiche"
          index: 1
      - swipe:
          from:
            id: 'tagsContainer'
          direction: UP
      - scrollUntilVisible:
          element:
            text: "Passe le bon plan\_!"
          visibilityPercentage: 50

- runFlow:
    when:
      visible:
        id: 'movie-calendar-day'
        index: 2
    commands:
      - tapOn:
          id: 'movie-calendar-day'
          index: 2

- runFlow:
    when:
      visible: "Prochaine séance\_:"
    commands:
      - tapOn:
          enabled: true
          below:
            text: "Prochaine séance\_:"

- tapOn:
    enabled: true
    below:
      id: VenuePreviewImage

- runFlow: #Si différentes gamme de prix pour l'offre
    when:
      visible: 'Prix'
    commands:
      - tapOn:
          label: 'Sélection du 1er prix disponible'
          below:
            text: 'Prix'
      - tapOn: 'Valider le prix'

- assertVisible: 'Nombre de places'
- tapOn: 'Duo'

- tapOn: 'Finaliser ma réservation'

- assertVisible: 'Détails de la réservation'
- tapOn: 'J’ai lu et j’accepte les conditions générales d’utilisation'
- scrollUntilVisible:
    element: 'Confirmer la réservation'
- tapOn: 'Confirmer la réservation'

- assertVisible: "Réservation confirmée\_!"
- tapOn:
    text: 'Voir ma réservation'
    retryTapIfNoChange: true

- scroll
- scroll
- runFlow: # Si la réservation peut être annulée
    when:
      visible: 'Annuler ma réservation'
    commands:
      - tapOn: 'Annuler ma réservation'
      - tapOn: 'Annuler ma réservation'

- waitForAnimationToEnd

- runFlow: # Si la réservation ne peut pas être annulée
    when:
      visible: 'Voir le détail de l’offre'
    commands:
      - tapOn:
          text: 'Voir le détail de l’offre'
      - pressKey: back
      - pressKey: back
