appId: ${MAESTRO_APP_ID}
---
- assertVisible:
    text: "Mes réservations"
    index: 0
- assertVisible: "En cours"
- assertVisible: "Terminées"

- runFlow:
    when:
      visible: "À retirer.*"
    commands:
      - tapOn: "À retirer.*"
      - scroll
      - scroll
      - tapOn: 'Annuler ma réservation'
      - tapOn: 'Annuler ma réservation'

# Cas sans réservation en cours
- runFlow:
    when:
      visible: "Tu n’as pas de réservation en cours.*"
    commands:
      - assertVisible: "Découvrir le catalogue"
      - tapOn: "Terminées"
      - assertVisible:
          id: "Réservation annulée.*"
          index: 0