appId: ${MAESTRO_APP_ID}
---
- assertVisible: "Bienvenue\_!"
- runFlow: # Si affichage de la Home sans player
    when:
      visible: "Playlist hybride"
    commands:
      - assertVisible: 'Débloque ton crédit'
      - tapOn: "Débloque ton crédit"
- runFlow: # Si affichage de la Home avec player
    when:
      visible:
        id: 'intersectionObserver'
    commands:
      - tapOn: "Débloque ton crédit"

- assertVisible: "Inscription"
- assertVisible: 'Crée-toi un compte'
