appId: app.passculture.webapp
---
- runFlow:
    when:
      true: ${MAESTRO_APP_INSTALLED == 'true'}
    label: 'Vérification du lien vers la page offre (FDL - app installée)'
    commands:
      - openLink:
          link: https://passcultureapp.page.link/?link=https%3A%2F%2Fpassculture.app%2Foffre%2F100547783%3Ffrom%3Ddeeplink%26utm_campaign%3Dtest%26utm_source%3Dtest%26utm_medium%3Dtest&apn=app.passculture.webapp&isi=1557887412&ibi=app.passculture&efr=1
          autoVerify: true
      - assertVisible:
          text: 'Respect de ta vie privée'
          index: 2
          optional: true
      - tapOn:
          text: 'Tout accepter'
          optional: true
      - assertVisible:
          id: 'offer-body-mobile'
      - assertVisible:
          id: 'offerBodyImage'

- runFlow:
    when:
      true: ${MAESTRO_APP_INSTALLED == 'false'}
    label: 'Vérification du lien vers la page offre (FDL - app non-installée)'
    commands:
      - stopApp: com.android.chrome
      - stopApp: com.android.vending
      - openLink:
          link: https://passcultureapp.page.link/?link=https%3A%2F%2Fpassculture.app%2Foffre%2F100547783%3Ffrom%3Ddeeplink%26utm_campaign%3Dtest%26utm_source%3Dtest%26utm_medium%3Dtest&apn=app.passculture.webapp&isi=1557887412&ibi=app.passculture&efr=1
          autoVerify: true
      - assertVisible: 'pass Culture App'
      - assertVisible: 'Installer'
      - stopApp: com.android.vending
