appId: app.passculture.webapp
---
- stopApp
- runFlow:
    when:
      true: ${MAESTRO_APP_INSTALLED == 'true'}
    label: "Vérification du lien vers la page offre (FDL - app installée)"
    commands:
      - openLink:
          link: https://passcultureapp.page.link/?link=https%3A%2F%2Fpassculture.app%2Frecherche%2Fresultats%3FlocationFilter%3D%257B%2522locationType%2522%253A%2522EVERYWHERE%2522%257D%26from%3Ddeeplink%26tags%3D%255B%2522optinlecture_focusjapon%2522%255D%26utm_campaign%3Dtest%26utm_source%3Dtest%26utm_medium%3Dtest&apn=app.passculture.webapp&isi=1557887412&ibi=app.passculture&efr=1
          autoVerify: true
      - assertVisible:
          text: "Respect de ta vie privée"
          index: 2
          optional: true
      - tapOn: 
          text: "Tout accepter"
          optional: true
      - assertVisible: "Rechercher"
      - stopApp

- runFlow:
    when:
      true: ${MAESTRO_APP_INSTALLED == 'false'}
    label: "Vérification du lien vers la page offre (FDL - app non-installée)"
    commands:
      - stopApp: com.android.chrome
      - openLink:
          link: https://passcultureapp.page.link/?link=https%3A%2F%2Fpassculture.app%2Frecherche%2Fresultats%3FlocationFilter%3D%257B%2522locationType%2522%253A%2522EVERYWHERE%2522%257D%26from%3Ddeeplink%26tags%3D%255B%2522optinlecture_focusjapon%2522%255D%26utm_campaign%3Dtest%26utm_source%3Dtest%26utm_medium%3Dtest&apn=app.passculture.webapp&isi=1557887412&ibi=app.passculture&efr=1
          autoVerify: true
      - assertVisible: "pass Culture App"
      - assertVisible: "Installer"
      - stopApp: com.android.vending