appId: ${MAESTRO_APP_ID}
---
- tapOn:
    text: 'Notifications'
    index: 1

- assertVisible:
    id: 'Interrupteur Autoriser l’envoi d’e-mails'
    enabled: false

- assertVisible:
    id: 'Interrupteur Autoriser les notifications'
    enabled: false

- assertVisible:
    id: 'Interrupteur Suivre tous les thèmes'
    enabled: false

- assertVisible:
    id: 'Interrupteur Cinéma'
    enabled: false

- assertVisible:
    id: 'Interrupteur Lecture'
    enabled: false

- assertVisible:
    id: 'Interrupteur Musique'
    enabled: false

- scroll

- assertVisible:
    id: 'Interrupteur Spectacles'
    enabled: false

- assertVisible:
    id: 'Interrupteur Activités créatives'
    enabled: false

- assertVisible:
    id: 'Interrupteur Visites et sorties'
    enabled: false

- tapOn:
    id: 'Revenir en arrière'
