appId: ${MAESTRO_APP_ID}
---
- 'scroll'
- assertVisible: 'Aides'
- tapOn: "Nouvelle fenêtre\_: Centre d’aide"

- runFlow: # Si 1ere ouverture de chrome
    when:
      visible: "Utiliser l'appli sans compte"
    commands:
      - tapOn: "Utiliser l'appli sans compte"
      - tapOn: "Non, merci"
      - pressKey: back

- tapOn:
    id: 'com.android.systemui:id/back'
    optional: true
