appId: ${MAESTRO_APP_ID}
---
- tapOn:
    text: 'Informations légales'
    index: 1

- assertVisible: 'Informations légales'
- assertVisible: 'Mentions légales'
- tapOn:
    id: "Nouvelle fenêtre\_: Conditions Générales d’Utilisation"
- waitForAnimationToEnd

- runFlow:
    file: ../../subFolder/cloud/commands/DoubleTapOnBack.yml

- runFlow: # Fallback si problème de retour
    when:
      visible: 'Autres'
    commands:
      - tapOn:
          text: 'Informations légales'
          index: 1

- tapOn:
    id: "Nouvelle fenêtre\_: Charte de protection des données personnelles"
- 'waitForAnimationToEnd'
- runFlow:
    file: ../../subFolder/cloud/commands/DoubleTapOnBack.yml

- runFlow:
    file: ../../subFolder/cloud/commands/TapOnBack.yml

- runFlow: # Fallback si problème de retour
    when:
      visible: 'Bonjour Test-e2e'
    commands:
      - tapOn:
          id: 'Mon profil'
